# qtxastir

./: AUTHORS  DEBUG_LEVELS  FAQ  INSTALL  LICENSE  Makefile.am  NEWS  OSM_cloudmade_1.geo  OSM_cloudmade_2.geo  OSM_cloudmade_5.geo  OSM_cloudmade_998.geo  OSM_cloudmade_999.geo  OSM_cycle.geo  OSM_mapnik.geo  OSM_osmarender.geo  OSM_skiing.geo  OSM_template  README  README.1ST  README.CVS  README.CYGWIN  README.Contributing  README.Getting-Started  README.MAPS  README.OSM_maps  README.win32  REGRESSION_TESTS  TODO  UPGRADE  USRadar.geo  acinclude.m4  bootstrap.sh  changes.txt  configure.ac  configure.in  install-xastir  mkinstalldirs  update-xastir
Davis/: Makefile.am  README  bootstrap.sh  configure.ac
Davis/src/: Makefile.am  db2APRS.c  defs.h
LaCrosse/: Makefile  Makefile.am  Makefile.in  README  bootstrap.sh  configure.ac
LaCrosse/src/: Makefile.am  defs.h  open2300db2APRS.c
callpass/: Makefile  Makefile.am  Makefile.in  callpass.c
config/: 24kgrid.dbfawk  Makefile.am  OSM_Cloudmade_administrative.dbfawk  OSM_Cloudmade_highway.dbfawk  OSM_Cloudmade_natural.dbfawk  OSM_Cloudmade_poi.dbfawk  OSM_Cloudmade_water_and_coastline.dbfawk  arealm.dbfawk  areawater.dbfawk  cousub.dbfawk  cousub00.dbfawk  edge.dbfawk  featnames.dbfawk  gps_wpt.dbfawk  language-Dutch.sys  language-English.sys  language-French.sys  language-German.sys  language-Italian.sys  language-Portuguese.sys  language-Spanish.sys  nwsc_ddmmyy.dbfawk  nwsc_ddmmyy_09.dbfawk  nwsc_ddmmyy_09b.dbfawk  nwsc_ddmmyy_10.dbfawk  nwsfz_ddmmyy.dbfawk  nwshzddmmyy.dbfawk  nwsmzddmmyy.dbfawk  nwsmzddmmyy_09.dbfawk  nwsozddap12.dbfawk  nwsozddmmyy.dbfawk  nwsozddmmyy_09.dbfawk  nwsw_ddjn12.dbfawk  nwsw_ddmmyy.dbfawk  nwsw_ddmmyy_09.dbfawk  nwsz_ddmmyy.dbfawk  nwsz_ddmmyy_09.dbfawk  nwsz_ddmmyy_10b.dbfawk  nwsz_ddmmyy_11.dbfawk  pointlm.dbfawk  (+33 more)
help/: Makefile.am
m4/: Makefile.am  Makefile.in
scripts/: BUILDRPMS  Coordinate.pm  LSB-BUILD  LSB-BUILD-ALL  LSB-BUILD-CURL  LSB-BUILD-DB  LSB-BUILD-GDAL  LSB-BUILD-GRAPHICSMAGICK  LSB-BUILD-JASPER  LSB-BUILD-JPEG  LSB-BUILD-LESSTIF  LSB-BUILD-PCRE  LSB-BUILD-PNG  LSB-BUILD-XPM  LSB-BUILD-ZLIB  Makefile.am  PigLatin.pl  STABLE  UIView2XastirLog.pl  Xastir_tigerpoly.py  coord-convert.pl  cvs2cl.pl  do_xastir_release_dev  do_xastir_release_stable  geopdf2gtiff.pl  get-NWSdata  get-fcc-rac.pl  get-gnis  get-maptools.sh  icontable.pl  inf2geo.pl  kiss-off.pl  langElmerFudd.pl  langMuppetsChef.pl  langOldeEnglish.pl  langPigLatin.pl  langPirateEnglish.pl  mapblast2geo.pl  mapfgd.pl  migrate-config.sh  (+18 more)
src/: LICENSE.geocoder  Makefile.am  alert.c  alert.h  awk.c  awk.h  bulletin_gui.c  bulletin_gui.h  color.c  color.h  database.h  datum.c  datum.h  db.c  db.h  db_gis.c  db_gis.h  dbfawk.c  dbfawk.h  draw_symbols.c  draw_symbols.h  fcc_data.c  fcc_data.h  festival.c  festival.h  fetch_remote.c  fetch_remote.h  geo-client.c  geo-find.c  geo.h  geocoder_gui.c  gps.c  gps.h  hashtable.c  hashtable.h  hashtable_itr.c  hashtable_itr.h  hashtable_private.h  hostname.c  hostname.h  (+77 more)
src/Davis/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  db2APRS.c
src/Davis/src/: Makefile.am  db2APRS.c  defs.h
src/callpass/: Makefile.am  Makefile.in  callpass.c
src/qt/: interfacecontroldialog.cpp  interfacecontroldialog.h  interfacemanager.cpp  interfacemanager.h  main.cpp  mainwindow.cpp  netinterface.cpp  netinterface.h  netinterfacepropertiesdialog.cpp  netinterfacepropertiesdialog.h  packetinterface.cpp  packetinterface.h  stationconfigurationdialog.cpp  stationconfigurationdialog.h  stationconfigurationdialog.ui  stationsettings.cpp  stationsettings.h  xastir-qt.pro  xastir.h
src/rtree/: Makefile.am  card.c  card.h  gammavol.c  index.c  index.h  node.c  rect.c  sphvol.c  split_l.c  split_l.h  split_q.c  split_q.h
src/shapelib/: Makefile.am  Makefile.in  dbfadd.c  dbfcreate.c  dbfdump.c  dbfopen.c  shpadd.c  shpcreate.c  shpdump.c  shpopen.c  shprewind  shprewind.c  shptest.c  shptree.c  shptreedump.c  shputils.c
src/shapelib/contrib/: Makefile.am  dbfcat.c  dbfinfo.c  shpcentrd.c  shpdata.c  shpgeo.c  shpinfo.c  shpproj.c  shpwkb.c
symbols/: Makefile.am
