# $Id: Makefile.am,v 1.5 2003/02/18 20:49:28 kg4ijb Exp $
configdir = ${prefix}/xastir/config

EXTRA_DIST = \
    language-Dutch.sys \
    language-English.sys \
    language-French.sys \
    language-German.sys \
    language-Italian.sys \
    language-Portuguese.sys \
    language-Spanish.sys \
    tnc-startup.sys \
    tnc-stop.sys \
    xastir.rgb \
    tnc-startup.kpc3 \
    tnc-startup.thd7 \
    tnc-startup.kam \
    tnc-startup.pico \
    tnc-startup.aea

config_DATA = \
    language-Dutch.sys \
    language-English.sys \
    language-French.sys \
    language-German.sys \
    language-Italian.sys \
    language-Portuguese.sys \
    language-Spanish.sys \
    tnc-startup.sys \
    tnc-stop.sys \
    xastir.rgb \
    tnc-startup.kpc3 \
    tnc-startup.thd7 \
    tnc-startup.kam \
    tnc-startup.pico \
    tnc-startup.aea

