# $Id: Makefile.am,v 1.6 2003/07/02 21:19:44 n2ygk Exp $
configdir = ${pkgdatadir}/config

EXTRA_DIST = \
    language-Dutch.sys \
    language-English.sys \
    language-French.sys \
    language-German.sys \
    language-Italian.sys \
    language-Portuguese.sys \
    language-Spanish.sys \
    tnc-startup.sys \
    tnc-stop.sys \
    xastir.rgb \
    tnc-startup.kpc3 \
    tnc-startup.thd7 \
    tnc-startup.kam \
    tnc-startup.pico \
    tnc-startup.aea

config_DATA = \
    language-Dutch.sys \
    language-English.sys \
    language-French.sys \
    language-German.sys \
    language-Italian.sys \
    language-Portuguese.sys \
    language-Spanish.sys \
    tnc-startup.sys \
    tnc-stop.sys \
    xastir.rgb \
    tnc-startup.kpc3 \
    tnc-startup.thd7 \
    tnc-startup.kam \
    tnc-startup.pico \
    tnc-startup.aea

