# $Id: Makefile.am,v 1.10 2003/11/10 14:56:38 n2ygk Exp $
configdir = ${pkgdatadir}/config

EXTRA_DIST = \
    language-Dutch.sys \
    language-English.sys \
    language-French.sys \
    language-German.sys \
    language-Italian.sys \
    language-Portuguese.sys \
    language-Spanish.sys \
    tnc-startup.sys \
    tnc-stop.sys \
    xastir.rgb \
    tgrcty.dbfawk \
    tgrkgl.dbfawk \
    tgrlk.dbfawk \
    tgrlpt.dbfawk \
    tgrlpy.dbfawk \
    tgrplc00.dbfawk \
    tgrwat.dbfawk \
    nwsc_ddmmyy.dbfawk \
    nwsmzddmmyy.dbfawk \
    nwsozddmmyy.dbfawk \
    nwsw_ddmmyy.dbfawk \
    nwsz_ddmmyy.dbfawk \
    tnc-startup.kpc3 \
    tnc-startup.thd7 \
    tnc-startup.kam \
    tnc-startup.pico \
    tnc-startup.aea

config_DATA = ${EXTRA_DIST}

