# $Id: Makefile.am,v 1.8 2007/01/03 19:41:07 we7u Exp $
#
# Copyright (C) 2000-2007  The Xastir Group
#
helpdir = ${pkgdatadir}/help
EXTRA_DIST = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Portuguese.dat \
    help-Spanish.dat

help_DATA = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Portuguese.dat \
    help-Spanish.dat
