# $Id: Makefile.am,v 1.10 2009/01/02 07:53:05 we7u Exp $
#
# Copyright (C) 2000-2009  The Xastir Group
#
helpdir = ${pkgdatadir}/help
EXTRA_DIST = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Portuguese.dat \
    help-Spanish.dat

help_DATA = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Portuguese.dat \
    help-Spanish.dat
