# $Id: Makefile.am,v 1.11 2010/01/31 02:12:23 we7u Exp $
#
# Copyright (C) 2000-2010  The Xastir Group
#
helpdir = ${pkgdatadir}/help
EXTRA_DIST = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Portuguese.dat \
    help-Spanish.dat

help_DATA = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Portuguese.dat \
    help-Spanish.dat
