# $Id: Makefile.am,v 1.10 2004/01/26 16:14:21 we7u Exp $
#
# Copyright (C) 2000-2004  The Xastir Group
#

pkglib_SCRIPTS = \
    Coordinate.pm \
    coord-convert.pl \
    fcc-get \
    icontable.pl \
    inf2geo.pl \
    mapblast2geo.pl \
    mapfgd.pl \
    permutations.pl \
    track-get.pl \
    update_langfile.pl \
    waypoint-get.pl \
    xastir-migrate.sh \
    xastir-fixcfg.sh

EXTRA_DIST = $(pkglib_SCRIPTS)




