# $Id: Makefile.am,v 1.12 2004/05/12 16:16:15 we7u Exp $
#
# Copyright (C) 2000-2004  The Xastir Group
#

pkglib_SCRIPTS = \
    Coordinate.pm \
    coord-convert.pl \
    fcc-get \
    icontable.pl \
    inf2geo.pl \
    mapblast2geo.pl \
    mapfgd.pl \
    overlay.pl \
    ozi2geo.pl \
    permutations.pl \
    split_gnis.bash \
    split_gnis.pl \
    test_coord.pl \
    track-get.pl \
    update_langfile.pl \
    waypoint-get.pl \
    xastir-fixcfg.sh \
    xastir-migrate.sh


EXTRA_DIST = $(pkglib_SCRIPTS)




