# $Id: Makefile.am,v 1.13 2004/08/25 01:59:18 we7u Exp $
#
# Copyright (C) 2000-2004  The Xastir Group
#

pkglib_SCRIPTS = \
    Coordinate.pm \
    coord-convert.pl \
    fcc-get \
    icontable.pl \
    inf2geo.pl \
    mapblast2geo.pl \
    mapfgd.pl \
    overlay.pl \
    ozi2geo.pl \
    permutations.pl \
    split_gnis.bash \
    split_gnis.pl \
    test_coord.pl \
    track-get.pl \
    update_langfile.pl \
    waypoint-get.pl \
    xastir-fixcfg.sh \
    xastir-migrate.sh \
    kiss-off.pl


EXTRA_DIST = $(pkglib_SCRIPTS)




