# $Id: Makefile.am,v 1.13 2009/01/02 07:51:28 we7u Exp $
#
# Copyright (C) 2000-2009  The Xastir Group
#

symbolsdir=${pkgdatadir}/symbols
EXTRA_DIST=symbols.dat 2x2.xbm 25pct.xbm 13pct.xbm alert.xbm flood.xbm red_flag.xbm snow.xbm tornado.xbm wind.xbm winter_wx.xbm wntr_strm.xbm
symbols_DATA= symbols.dat 2x2.xbm 25pct.xbm 13pct.xbm alert.xbm flood.xbm red_flag.xbm snow.xbm tornado.xbm wind.xbm winter_wx.xbm wntr_strm.xbm
