# $Id: Makefile.am,v 1.14 2010/01/31 02:12:25 we7u Exp $
#
# Copyright (C) 2000-2010  The Xastir Group
#

symbolsdir=${pkgdatadir}/symbols
EXTRA_DIST=symbols.dat 2x2.xbm 25pct.xbm 13pct.xbm alert.xbm flood.xbm red_flag.xbm snow.xbm tornado.xbm wind.xbm winter_wx.xbm wntr_strm.xbm
symbols_DATA= symbols.dat 2x2.xbm 25pct.xbm 13pct.xbm alert.xbm flood.xbm red_flag.xbm snow.xbm tornado.xbm wind.xbm winter_wx.xbm wntr_strm.xbm
