
# $Id: Makefile.am,v 1.5 2008/01/16 19:34:03 we7u Exp $
# Copyright (C) 2004-2008  The Xastir Group

noinst_LIBRARIES=librtree.a
librtree_a_SOURCES=index.c \
                 index.h \
                 rect.c \
                 node.c \
                 card.c \
                 card.h \
                 split_l.c \
                 split_l.h 
