
# $Id: Makefile.am,v 1.6 2009/01/02 07:58:13 we7u Exp $
# Copyright (C) 2004-2009  The Xastir Group

noinst_LIBRARIES=librtree.a
librtree_a_SOURCES=index.c \
                 index.h \
                 rect.c \
                 node.c \
                 card.c \
                 card.h \
                 split_l.c \
                 split_l.h 
