
# $Id: Makefile.am,v 1.7 2010/01/31 02:12:25 we7u Exp $
# Copyright (C) 2004-2010  The Xastir Group

noinst_LIBRARIES=librtree.a
librtree_a_SOURCES=index.c \
                 index.h \
                 rect.c \
                 node.c \
                 card.c \
                 card.h \
                 split_l.c \
                 split_l.h 
